# swing-schedule

./: .gitignore  README.md  pyproject.toml
data/: input.csv  students.csv  teachers.csv
src/swing_schedule/: __init__.py  swing_schedule.py
swing_schedule/: swing_schedule.py
