[project]
name = "swing-schedule"
version = "0.1.0"
description = "Swing Dance Schedule Generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ortools >= 9.12",
    "regex >= 2024.11.6",
]

[dependency-groups]
dev = [
    "ruff >= 0.9.7",
    #"pytest >= 8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swing_schedule"]
