[project]
name = "swing-schedule"
version = "0.1.0"
description = "Swing Dance Schedule Generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ortools >= 9.12",
]

[project.urls]
Repository = "https://github.com/ep69/swing-schedule"

[project.scripts]
"swing_schedule" = "swing_schedule:main"

[dependency-groups]
dev = [
    "ruff >= 0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swing_schedule"]
