[project]
name = "swing-schedule"
version = "0.1.4a1"
description = "Swing Dance Schedule Generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ortools >= 9.12",
]

[project.urls]
Repository = "https://github.com/ep69/swing-schedule"

[project.scripts]
"swing-schedule" = "swing_schedule:main"

[dependency-groups]
dev = [
    "ruff >= 0.9.7",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
